# pi-mta-sign

./: .gitignore  LICENSE  README.md  endpoints.json  justfile  main.py  mta.py  mta_status_alerts.json  mta_test.py  pyproject.toml  requirements.txt  route.py  ruff.toml  server.py  stop.py  test_closures.py  testing.py
example-json-outputs/: mta_status_alerts.json  subway_timing_sample.json
mta-sign-ui/: .pnp.cjs  next.config.js  openapitools.json  package-lock.json  package.json  tailwind.config.js
mta-sign-ui/app/: layout.tsx  page.tsx
mta-sign-ui/components/: header.tsx
mta-sign-ui/components/trains/: line.tsx  station.tsx
mta-sign-ui/gen-sources/mta-sign-api/: api.ts  openapi.json
mta-sign-ui/gen-sources/mta-sign-api/.openapi-generator/: FILES
mta-sign-ui/gen-sources/mta-sign-api/apis/: ConfigApi.ts  MtaDataApi.ts  StartApi.ts  index.ts
mta-sign-ui/gen-sources/mta-sign-api/models/: AllStationModel.ts  Route.ts  RouteResponse.ts  StationResponse.ts  index.ts
mta-sign-ui/services/api/: mta-server.ts
mta-sign-ui/services/mta-api/: mta-server.ts  types.ts
mta_api_client/: feed.py  mta.py  stop.py  train.py
mta_manager/: __init__.py  feed.py  mta.py  mta_test.py  route.py  stop.py  train.py
mta_sign_server/: router.py
mta_sign_server/config/: router.py
mta_sign_server/mta/: router.py  schemas.py
templates/layouts/: index.html  old.html
templates/static/css/: old.css  style.css
templates/static/js/: DataRequests.js  MtaData.js
